# mero-tag

./: .gitignore  Makefile  README.md  requirements.md
app/MeroKit/: Package.swift
app/MeroKit/Sources/MeroKit/: AdminApi.swift  AuthApi.swift  BlobApi.swift  MeroClient.swift  MeroError.swift  OutputParser.swift  RpcClient.swift  SseClient.swift  SseMessageDecoder.swift  TokenStore.swift
app/MeroKit/Sources/MeroKitVerify/: main.swift
app/MeroKit/Tests/MeroKitTests/: AdminApiTests.swift  AuthApiTests.swift  BlobApiTests.swift  MeroErrorTests.swift  OutputParserTests.swift  RpcClientTests.swift  SseClientTests.swift  SseMessageDecoderTests.swift  TestSupport.swift
app/MeroTag/: Info.plist  project.yml
app/MeroTag/Sources/App/: AppState.swift  MeroTagApp.swift
app/MeroTag/Sources/DesignSystem/: AnimatedBackground.swift  BrandMark.swift  Components.swift  Theme.swift
app/MeroTag/Sources/Features/Home/: HomeView.swift
app/MeroTag/Sources/Features/Login/: LoginView.swift  WelcomeView.swift
app/MeroTag/Sources/Features/Map/: LiveMapView.swift
app/MeroTag/Sources/Features/TrackerDetail/: TrackerDetailView.swift
app/MeroTag/Sources/Models/: Models.swift
app/MeroTag/Sources/Services/: LocationService.swift  MeroService.swift
app/MeroTag/Sources/Store/: TrackerStore.swift
app/MeroTag/Tests/: EventTests.swift  ModelsTests.swift
app/MeroTag/UITests/: MeroTagUITests.swift
logic/: Cargo.toml  build-bundle.sh  build.sh
logic/src/: lib.rs
scripts/: dev-invite.sh  dev-node.sh  dev-node2.sh  integration-test.sh  setup.sh  workflows.sh
workflows/: ci.yml  logic-test.yml
